--- a/css/calendar.pacific-division.css
+++ b/css/calendar.pacific-division.css
@@ -182,7 +182,7 @@
 }
 
 .pacific-division #date-weather-container::before {
-    content: "PACIFIC CALENDAR";
+    content: "The NBA West PACIFIC DIVISION CALENDAR";
     position: absolute;
     top: -10px;
     right: 20px;
