--- a/css/calendar.red-morning-light.css
+++ b/css/calendar.red-morning-light.css
@@ -270,7 +270,7 @@
 }
 
 .red-morning-light #date-weather-container::before {
-    content: "🌄 DAWN OVERVIEW";
+    content: "🌄 A NEW DAWN";
     position: absolute;
     top: -10px;
     right: 20px;
